hphp/hack/test/typecheck/double_nullable2.php.like_types.exp
File "double_nullable2.php", line 8, characters 14-24:
Invalid argument (Typing[4110])
File "idx.hhi", line 32, characters 3-25:
Expected ?KeyedContainer<[unresolved], ?[unresolved]>
File "double_nullable2.php", line 7, characters 35-57:
But got <expr#1>
File "double_nullable2.php", line 8, characters 14-24:
  where '<expr#1>' is a reference to this expression
